# modrinthDownloads

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
modrinthDownloads/: __init__.py  __main__.py  modrinthDownloads.py
