[project]
name = "modrinthDownloads"
version = "0.2.1"
dependencies = [
    "windows-curses; sys_platform == 'win32'",
    "requests"
]
readme = "README.md"
description = "A text user interface to see Modrinth users' downloads."

[project.scripts]
modrinthDownloads = "modrinthDownloads.__main__:start"
modrinthdownloads = "modrinthDownloads.__main__:start"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
